--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>material design lite grid components for Golang</title>
-  <script src="https://wizenerd.github.io/ui/grid/icons.js"></script>
+  <script src="https://wizenerd.github.io/ui/icons/icons.js"></script>
 </head>
 
 <body>
